--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<body>
 		<section>
 			<picture>
-			  <source media="(max-width: 950px)" srcset="assets/img/kitten-large.png">
-			  <source media="(max-width: 700px) and (min-width: 300px)" srcset="assets/img/kitten-small.png">
-			  <img src="assets/img/kitten-medium.png" alt="Kitten">
+			  <source media="(min-width: 500px) and (max-width: 950px)" srcset="assets/img/kitten-large.png"/>
+			  <source media="(min-width: 951px)" srcset="assets/img/kitten-medium.png"/>
+			  <img src="assets/img/kitten-small.png" alt="Kitten">
 			</picture>
 		</section>
 		<script src="assets/js/app.js" charset="utf-8"></script>
